--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2>Лабораторні заняття</h2>
         <ul>
             <li><a href="https://kiworaa.github.io/site123/" target="_blank">Лабораторне заняття 1</a></li>
-            <li><a href="https://example.com/lab2" target="_blank">Лабораторне заняття 2</a></li>
+            <li><a href="https://kiworaa.github.io/www/" target="_blank">Лабораторне заняття 2</a></li>
         </ul>
     </section>
 
